[project]
name = "tile2png"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arrow>=1.3.0",
    "click>=8.2.1",
    "httpx>=0.28.1",
    "numpy>=2.3.1",
    "pillow>=11.3.0",
    "trio>=0.30.0",
]


[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[dependency-groups]
dev = [
    "ruff>=0.12.4",
]
